--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
