--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.2.3",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "firebase": "^10.11.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
