--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/stripe-js": "^3.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.8",
     "currency-formatter": "^1.5.9",
     "firebase": "^10.11.1",
+    "form-data": "^4.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "paystack": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-number-format": "^5.3.4",
     "react-redux": "^9.1.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "stripe": "^15.6.0"
   },
   "devDependencies": {
     "eslint": "^8",
