--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@heroicons/react": "^1.0.6",
+    "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.3",
     "@stripe/stripe-js": "^3.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "currency-formatter": "^1.5.9",
     "firebase": "^10.11.1",
     "form-data": "^4.0.0",
+    "framer-motion": "^11.2.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "paystack": "^2.0.1",
