--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "paystack": "^2.0.1",
+    "paystack-sdk": "^2.5.13",
     "react": "^18",
     "react-dom": "^18",
     "react-number-format": "^5.3.4",
