--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@heroicons/react": "^1.0.6",
+    "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.3",
     "@stripe/stripe-js": "^3.4.0",
