--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-number-format": "^5.3.4",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.9.0",
     "stripe": "^15.6.0"
   },
   "devDependencies": {
