--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-number-format": "^5.3.4",
+    "react-paystack": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
